--- a/Abbey's website.html
+++ b/Abbey's website.html
@@ -67,7 +67,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Working in the System Operations department. Strong work with Maximo System for Work Orders, Inspections, and Trouble Calls. As well as data collection, manipulation, and application in Microsoft applications. </p>
           <hr>
         </div>
-        <div class="w3-container">
+        <div class="w3-container"> <!--this should work -->
           <h5 class="w3-opacity"><b>Team Member / Chick-fil-A</b></h5>
           <h6 class="w3-text-orange"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2015 - Jul 2016</h6>
           <p>Front of House team member where quick thinking and customer service was necessary</p>
